🔨 Added endpoints with QRCode; Need to Write README, Update Schema on Serializers
